--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,25 @@
+html {
+    height: 100%;
+}
+
+body {
+    height: 100%;
+}
+
 h2 {
     font-style: italic;
     background: azure;
 }
 
 footer {
-    position: fixed;
+    position: relative;
     left: 0;
     bottom: 0;
     width: 100%;
     background-color: cadetblue;
     color: white;
     text-align: center;
+
 }
 
 header{
@@ -19,4 +28,7 @@ header{
     background: #1abc9c;
     color: white;
     font-size: 25px;
+}
+article{
+    margin:  20px;
 }
