Работа в классе от 20.08  21:00

--- a/css/style.css
+++ b/css/style.css
@@ -22,17 +22,20 @@ footer {
 
 }
 
-header{
+header {
     padding: 20px;
     text-align: center;
     background: #1abc9c;
     color: white;
     font-size: 25px;
 }
-article{
-    margin:  20px;
+
+article {
+    margin: 20px;
+
 }
 
-span.warning{
+span.warning {
     color: red;
+    position: absolute;
 }
