--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,8 @@ h2 {
 }
 
 footer {
-    position: relative;
+
+    position: absolute;
     left: 0;
     bottom: 0;
     width: 100%;
@@ -28,14 +29,29 @@ header {
     background: #1abc9c;
     color: white;
     font-size: 25px;
+    float: top;
 }
 
 article {
     margin: 20px;
+    float: left;
+    background-color: grey;
+
 
 }
 
 span.warning {
     color: red;
-    position: absolute;
+
+}
+
+aside {
+    float: right;
+    margin: 20px;
+    background-color: chartreuse;
+
+}
+table {
+
+
 }
